--- a/src/App.css
+++ b/src/App.css
@@ -171,20 +171,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: left;
+  width: 50%;
+  height: auto;
+}
+
+.about-me-left h2 {
+  color:#144870;
+  font-size: 20px;
+}
+.about-me-left p {
+  color:#2D88CF;
+  font-size: 16px;
+}
+
+.about-me-right {
+  display: flex;
+  flex-direction: column;
+  /*align-items: center;*/
   justify-content: center;
   text-align: left;
   width: 50%;
   height: auto;
 }
 
-.about-me-right {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: left;
-  width: 50%;
-  height: auto;
+.about-me-right h2 {
+  color:#144870;
+  font-size: 20px;
+}
+
+.about-me-right p {
+  color:#2D88CF;
+  font-size: 16px;
 }
 
 /*Footer 頁尾 置中*/
