--- a/src/App.css
+++ b/src/App.css
@@ -101,10 +101,12 @@
   font-size: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
+  color: #144870;
 }
 .car-logo p {
   font-size: 16px;
   margin: 10px;
+  color: #2D88CF;
 }
 
 .four-divs .div1,
