--- a/src/styles/MobileHeader.css
+++ b/src/styles/MobileHeader.css
@@ -1,83 +1,82 @@
 /* 手機版主容器，使用 flex 排列左邊 logo 和右邊選單 */
 .mobile-nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #2D88CF;
-    z-index: 1000;
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #2d88cf;
+  z-index: 1000;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 /* Logo 部分 */
 .mobile-logo-div {
-    flex: 1; /* 讓 Logo 佔據左邊空間 */
-    }
-    
+  flex: 1; /* 讓 Logo 佔據左邊空間 */
+}
+
 .mobile-logo {
-    height: 50px; /* 可根據需求調整 */
-    }
-    
-  /* 菜單按鈕部分 */
+  height: 50px; /* 可根據需求調整 */
+}
+
+/* 菜單按鈕部分 */
 .menu-icon {
-    flex: 1;
-    text-align: right;
-    font-size: 24px;
-    font-weight: 900;
-    color: #fff;
-    cursor: pointer;
-    padding: 10px; /* 調整 padding 以確保按鈕不會超出視窗 */
-    margin-right: 10px; /* 添加 margin-right 以避免靠得太近 */
-    box-sizing: border-box; /* 確保 padding 和 margin 不會導致元素超出容器 */
-    }
-    
-  /* 手機版選單 */
+  flex: 1;
+  text-align: right;
+  font-size: 24px;
+  font-weight: 900;
+  color: #fff;
+  cursor: pointer;
+  padding: 10px; /* 調整 padding 以確保按鈕不會超出視窗 */
+  margin-right: 10px; /* 添加 margin-right 以避免靠得太近 */
+  box-sizing: border-box; /* 確保 padding 和 margin 不會導致元素超出容器 */
+}
+
+/* 手機版選單 */
 .mobile-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: #2D88CF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    }
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #2d88cf;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .mobile-menu-item {
-    width: 100%;
-    padding: 15px;
-    text-align: center;
-    font-weight: 900;
-    color: #fff;
-    text-decoration: none;
-    border-bottom: 1px solid #2D88CF;
-    }
+  width: 100%;
+  padding: 15px;
+  text-align: center;
+  font-weight: 900;
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #2d88cf;
+}
 
 .mobile-menu-item:hover {
-    color:#144870;
-    ;
-    }
+  color: #144870;
+}
 
-  /* 下拉選單 */
+/* 下拉選單 */
 .mobile-dropdown {
-    background-color: #2D88CF;
-    width: 100%;
-    border-top: 1px solid #347bb1;
-    }
+  background-color: #2d88cf;
+  width: 100%;
+  border-top: 1px solid #347bb1;
+}
 
 .mobile-dropdown-item {
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-    color: #fff;
-    cursor: pointer;
-    border-bottom: 1px solid #347bb1;
-    }
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  border-bottom: 1px solid #347bb1;
+}
 
 .mobile-dropdown-item:hover {
-    color: #144870;
-    }
+  color: #144870;
+}
