--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -1,16 +1,29 @@
 .todo-container {
-  padding: 20px;
-  background-color: #f0f0f0;
-  border-radius: 5px;
-  margin-bottom: 2em;
+  width: 900px;
+  padding: 30px;
+  background-color: #e6dbc9;
+  border-radius: 10px;
+  margin: 2em auto;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  font-family: 'Courier New', Courier, monospace;
+  color: #000000;
+  text-align: center;
+}
+
+h1 {
+  font-size: 24px;
+  color: #d9900a;
 }
 
 input[type='text'] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  width: 90%;
+  padding: 12px;
+  margin-bottom: 15px;
+  border: 2px solid #91b3bc;
+  border-radius: 5px;
+  background-color: #e6dbc9;
+  color: #706b4d;
+  text-align: center;
 }
 
 ul {
@@ -22,32 +35,71 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
+  padding: 12px;
+  margin-bottom: 8px;
+  border-radius: 5px;
+  background-color: #d4b692;
+  border: 2px solid #a3826f;
+  transition: background-color 0.3s;
+}
+
+.todo-item:hover {
+  background-color: #c89f6b;
+}
+
+.todo-item .task-text {
+  font-size: 18px;
+  color: #4a3b2e;
 }
 
 .task-completed {
   text-decoration: line-through;
-  color: #999;
+  color: #82735f;
+}
+
+.delete-button {
+  background-color: #4a3b2e;
+  color: #e6dbc9;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.delete-button:hover {
+  background-color: #2f2920;
+}
+
+.checkbox {
+  transform: scale(1.5);
+  margin-right: 10px;
+}
+
+.filter-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
 }
 
 .filter-buttons button {
   margin: 5px;
-  padding: 10px;
+  padding: 12px 20px;
   border: none;
-  background-color: #007bff;
+  background-color: #5b4c57;
   color: white;
-  border-radius: 3px;
+  border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .filter-buttons button.active {
-  background-color: #0056b3;
+  background-color: #857887;
 }
 
 footer {
   margin-top: 20px;
-  text-align: center;
-  font-size: 12px;
-  color: #666;
+  font-size: 14px;
+  color: #a89d89;
 }
