--- a/src/styles/MobileHeader.css
+++ b/src/styles/MobileHeader.css
@@ -66,6 +66,8 @@
   background-color: #2d88cf;
   width: 100%;
   border-top: 1px solid #347bb1;
+  display: flex;
+  flex-direction: column;
 }
 
 .mobile-dropdown-item {
